finishing basic layout of html and css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>Angela J. Holden</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet" />
 		<link rel="stylesheet" href="normalize.css" />
 		<link rel="stylesheet" href="style.css" />
 	</head>
@@ -42,16 +42,18 @@
 				<img class="background-image" src="https://picsum.photos/1900/1080" alt"Lorem Picsum random image">
 				<h1 class="hero-text">Angela J. Holden</h1>
 			</section>
-			<h2 class="secondary-header">Hello</h2>
 			<section class="main-content">
-				<div class="one-half">
-					<img src="https://picsum.photos/1024/768" alt="Lorem Picsum placeholder text" />
+				<h2 class="secondary-header">Hello</h2>
+				<div class="inner_wrap">
+					<figure class="image one-half">
+						<img src="https://picsum.photos/1024/768" alt="Lorem Picsum placeholder text" />
+					</figure>
+					<div class="one-half">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, aperiam doloremque voluptatum provident neque placeat itaque quam. Vel ullam aspernatur cumque molestiae deserunt, cupiditate aliquid consectetur voluptas quas delectus natus nihil officiis ad exercitationem, culpa fuga soluta distinctio officia iusto est rerum autem odit. Qui, molestias ab necessitatibus omnis impedit excepturi cupiditate, harum perferendis ipsa obcaecati adipisci nam ullam officiis magni earum repellendus asperiores doloremque iste illum fugit, praesentium eveniet quae est? Sunt rem aliquam in porro illo quas doloremque repellat modi hic? Consequatur nemo quas eveniet voluptatum aspernatur sint eaque doloremque perspiciatis error magnam ab dolore eum, saepe deserunt eligendi harum corporis dignissimos tenetur sunt. Ea itaque, ducimus mollitia animi est error labore reprehenderit asperiores, dolorem praesentium ipsum. Repellendus corporis a sit maxime itaque!</div>
 				</div>
-				<div class="one-half">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, aperiam doloremque voluptatum provident neque placeat itaque quam. Vel ullam aspernatur cumque molestiae deserunt, cupiditate aliquid consectetur voluptas quas delectus natus nihil officiis ad exercitationem, culpa fuga soluta distinctio officia iusto est rerum autem odit. Qui, molestias ab necessitatibus omnis impedit excepturi cupiditate, harum perferendis ipsa obcaecati adipisci nam ullam officiis magni earum repellendus asperiores doloremque iste illum fugit, praesentium eveniet quae est? Sunt rem aliquam in porro illo quas doloremque repellat modi hic? Consequatur nemo quas eveniet voluptatum aspernatur sint eaque doloremque perspiciatis error magnam ab dolore eum, saepe deserunt eligendi harum corporis dignissimos tenetur sunt. Ea itaque, ducimus mollitia animi est error labore reprehenderit asperiores, dolorem praesentium ipsum. Repellendus corporis a sit maxime itaque!</div>
 			</section>
 			<section class="social">
 				<nav class="social-nav">
-					<ul>
+					<ul class="inner_wrap">
 						<li>
 							<a href="#">
 								<span id="instagram" class="access-hidden">Instagram</span>
@@ -89,8 +91,8 @@
 				</nav>
 			</section>
 			<section class="instagram">
-				<h2 class="secondary_header">Instagram</h2>
-				<p><a href="#">@angelajholden</a></p>
+				<h2 class="tertiary-header">Instagram</h2>
+				<p class="desc"><a href="#">Follow @angelajholden</a></p>
 				<div class="instagram-feed">
 					<ul>
 						<li>
@@ -128,9 +130,11 @@
 			</section>
 		</main>
 		<footer class="footer">
-			<div class="one-third">&copy; Angela J. Holden. All Rights Reserved.</div>
-			<div class="one-third">Angela J. Holden</div>
-			<div class="one-third">Made with love in Saint Paul, MN.</div>
+			<div class="inner_wrap">
+				<div class="one-third">&copy; Angela J. Holden. All Rights Reserved.</div>
+				<div class="one-third">Angela J. Holden</div>
+				<div class="one-third">Made with love in Saint Paul, MN.</div>
+			</div>
 		</footer>
 	</body>
 </html>
