--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 	<body>
 		<header class="header">
 			<div class="inner_wrap">
-				<button class="icon">
+				<button class="icon menu">
 					<span id="menu-icon" class="access-hidden">Menu</span>
-					<svg aria-labelledby="menu-icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><path fill="none" stroke="#fff" stroke-linecap="round" stroke-miterlimit="10" stroke-width="32" d="M80 160h352M80 256h352M80 352h352" /></svg>
+					<svg aria-labelledby="menu-icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><path fill="none" stroke="" stroke-linecap="round" stroke-miterlimit="10" stroke-width="32" d="M80 160h352M80 256h352M80 352h352" /></svg>
 				</button>
 				<nav class="navigation">
 					<ul>
@@ -28,7 +28,7 @@
 						<li><a href="">Contact</a></li>
 					</ul>
 				</nav>
-				<button class="icon">
+				<button class="icon search">
 					<span id="search-icon" class="access-hidden">Search</span>
 					<svg aria-labelledby="search-icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512">
 						<path d="M221.09 64a157.09 157.09 0 10157.09 157.09A157.1 157.1 0 00221.09 64z" fill="none" stroke="#fff" stroke-miterlimit="10" stroke-width="32" />
@@ -136,5 +136,6 @@
 				<div class="one-third">Made with love in Saint Paul, MN.</div>
 			</div>
 		</footer>
+		<script src="./main.js"></script>
 	</body>
 </html>
