search modal/drawer styles

--- a/index.html
+++ b/index.html
@@ -31,19 +31,26 @@
 				<button class="icon search">
 					<span id="search-icon" class="access-hidden">Search</span>
 					<svg aria-labelledby="search-icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512">
-						<path d="M221.09 64a157.09 157.09 0 10157.09 157.09A157.1 157.1 0 00221.09 64z" fill="none" stroke="#fff" stroke-miterlimit="10" stroke-width="32" />
-						<path fill="none" stroke="#fff" stroke-linecap="round" stroke-miterlimit="10" stroke-width="32" d="M338.29 338.29L448 448" />
+						<path d="M221.09 64a157.09 157.09 0 10157.09 157.09A157.1 157.1 0 00221.09 64z" fill="none" stroke="" stroke-miterlimit="10" stroke-width="32" />
+						<path fill="none" stroke="" stroke-linecap="round" stroke-miterlimit="10" stroke-width="32" d="M338.29 338.29L448 448" />
 					</svg>
 				</button>
+				<div class="search-drawer">
+					<form class="form inner_wrap" action="">
+						<label class="access-hidden" for="search">Search</label>
+						<input id="search" type="search" name="search" placeholder="Search" />
+						<input type="submit" value="Submit" />
+					</form>
+				</div>
 			</div>
 		</header>
 		<main class="main">
 			<section class="hero">
 				<img class="background-image" src="https://picsum.photos/1900/1080" alt"Lorem Picsum random image">
-				<h1 class="hero-text">Angela J. Holden</h1>
+				<!--<h1 class="hero-text">Angela J. Holden</h1>-->
 			</section>
 			<section class="main-content">
-				<h2 class="secondary-header">Hello</h2>
+				<h1 class="secondary-header">Angela J. Holden</h1>
 				<div class="inner_wrap">
 					<figure class="image one-half">
 						<img src="https://picsum.photos/1024/768" alt="Lorem Picsum placeholder text" />
