styles for dropdown sub navigation

--- a/index.html
+++ b/index.html
@@ -21,10 +21,24 @@
 					<ul>
 						<li><a href="">Home</a></li>
 						<li><a href="">Features</a></li>
-						<li><a href="">Pages</a></li>
+						<li>
+							<a href="">Pages</a>
+							<ul class="sub-nav">
+								<li><a href="">Sub Item One</a></li>
+								<li><a href="">Sub Item Two</a></li>
+								<li><a href="">Sub Item Three</a></li>
+							</ul>
+						</li>
 						<li><a href="">Categories</a></li>
 						<li><a href="">About</a></li>
-						<li><a href="">Shop</a></li>
+						<li>
+							<a href="">Shop</a>
+							<ul class="sub-nav">
+								<li><a href="">Sub Item One</a></li>
+								<li><a href="">Sub Item Two</a></li>
+								<li><a href="">Sub Item Three</a></li>
+							</ul>
+						</li>
 						<li><a href="">Contact</a></li>
 					</ul>
 				</nav>
@@ -138,9 +152,12 @@
 		</main>
 		<footer class="footer">
 			<div class="inner_wrap">
-				<div class="one-third">&copy; Angela J. Holden. All Rights Reserved.</div>
+				<div class="one-third">&copy; All Rights Reserved.</div>
 				<div class="one-third">Angela J. Holden</div>
-				<div class="one-third">Made with love in Saint Paul, MN.</div>
+				<div class="one-third">
+					Made with love in
+					<span>Saint Paul, MN.</span>
+				</div>
 			</div>
 		</footer>
 		<script src="./main.js"></script>
