desktop styles for navigation

--- a/index.html
+++ b/index.html
@@ -19,27 +19,27 @@
 				</button>
 				<nav class="navigation">
 					<ul>
-						<li><a href="">Home</a></li>
-						<li><a href="">Features</a></li>
+						<li><a href="./index.html">Home</a></li>
+						<li><a href="./features.html">Features</a></li>
 						<li>
-							<a href="">Pages</a>
+							<a href="./pages.html">Pages</a>
 							<ul class="sub-nav">
-								<li><a href="">Sub Item One</a></li>
-								<li><a href="">Sub Item Two</a></li>
-								<li><a href="">Sub Item Three</a></li>
+								<li><a href="./sub-one.html">Sub Item One</a></li>
+								<li><a href="./sub-two.html">Sub Item Two</a></li>
+								<li><a href="./sub-three.html">Sub Item Three</a></li>
 							</ul>
 						</li>
-						<li><a href="">Categories</a></li>
-						<li><a href="">About</a></li>
+						<li><a href="./catgories.html">Categories</a></li>
+						<li><a href="./about.html">About</a></li>
 						<li>
-							<a href="">Shop</a>
+							<a href="./shop.html">Shop</a>
 							<ul class="sub-nav">
-								<li><a href="">Sub Item One</a></li>
-								<li><a href="">Sub Item Two</a></li>
-								<li><a href="">Sub Item Three</a></li>
+								<li><a href="./sub-one.html">Sub Item One</a></li>
+								<li><a href="./sub-two.html">Sub Item Two</a></li>
+								<li><a href="./sub-three.html">Sub Item Three</a></li>
 							</ul>
 						</li>
-						<li><a href="">Contact</a></li>
+						<li><a href="./contact.html">Contact</a></li>
 					</ul>
 				</nav>
 				<button class="icon search">
