--- a/index.html
+++ b/index.html
@@ -21,16 +21,23 @@
 					<ul>
 						<li><a href="./index.html">Home</a></li>
 						<li><a href="./features.html">Features</a></li>
+						<li><a href="./pages.html">Pages</a></li>
 						<li>
-							<a href="./pages.html">Pages</a>
+							<a href="./categories.html">Categories</a>
 							<ul class="sub-nav">
 								<li><a href="./sub-one.html">Sub Item One</a></li>
 								<li><a href="./sub-two.html">Sub Item Two</a></li>
 								<li><a href="./sub-three.html">Sub Item Three</a></li>
 							</ul>
 						</li>
-						<li><a href="./categories.html">Categories</a></li>
-						<li><a href="./about.html">About</a></li>
+						<li>
+							<a href="./about.html">About</a>
+							<ul class="sub-nav">
+								<li><a href="./sub-one.html">Sub Item One</a></li>
+								<li><a href="./sub-two.html">Sub Item Two</a></li>
+								<li><a href="./sub-three.html">Sub Item Three</a></li>
+							</ul>
+						</li>
 						<li>
 							<a href="./shop.html">Shop</a>
 							<ul class="sub-nav">
