--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 						<li><a href="./index.html">Home</a></li>
 						<li><a href="./features.html">Features</a></li>
 						<li>
-							<a href="./pages.html">Pages</a>
+							<a href="./pages.html">
+								Pages
+								<svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><path fill="none" stroke="" stroke-linecap="square" stroke-miterlimit="10" stroke-width="48" d="M112 184l144 144 144-144" /></svg>
+							</a>
 							<ul class="sub-nav">
 								<li><a href="./sub-one.html">Sub Item One</a></li>
 								<li><a href="./sub-two.html">Sub Item Two</a></li>
@@ -32,7 +35,10 @@
 						<li><a href="./categories.html">Categories</a></li>
 						<li><a href="./about.html">About</a></li>
 						<li>
-							<a href="./shop.html">Shop</a>
+							<a href="./shop.html">
+								Shop
+								<svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><path fill="none" stroke="" stroke-linecap="square" stroke-miterlimit="10" stroke-width="48" d="M112 184l144 144 144-144" /></svg>
+							</a>
 							<ul class="sub-nav">
 								<li><a href="./sub-one.html">Sub Item One</a></li>
 								<li><a href="./sub-two.html">Sub Item Two</a></li>
